fixed line height on mobile

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 
 .header-right > .vyse-title {
   font-size: 1.8em;
+  line-height: 1.2;
   font-family: "Rubik";
 }
 
